# mosaic_task

./: .dockerignore  Dockerfile  README.md  TaskDescription.md  pyproject.toml
src/rectangle_analyzer/: __init__.py  analyzer.py  api.py
src/rectangle_analyzer/static/: app.js  style.css
src/rectangle_analyzer/templates/: index.html
tests/: test_rectangles.py
